--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node src/index.js"
+    "dev": "nodemon --exec babel-node src/index.js",
+    "lint": "prettier --check '{src}/**/*.js' 'package.json'  && eslint --fix src/*",
+    "format": "prettier --check '{src}/**/*.js' 'package.json' --write"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +16,8 @@
     "apollo-server": "^2.14.2",
     "graphql": "^14.5.8",
     "lodash": "^4.17.15",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "prettier": "^2.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
